--- a/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
+++ b/src/app/cliente/cliente-cadastro/cliente-cadastro.component.html
@@ -1,3 +1,39 @@
-<p>
-  cliente-cadastro works!
-</p>
+<div class="container">
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <h1>Novo Cliente</h1>
+    </div>
+    <div class="ui-g-12 ui-fluid">
+      <label for="">Nome</label>
+      <input pInputText type="text">
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+      <label for="">Logradouro</label>
+      <input pInputText type="text">
+    </div>
+    <div class="ui-g-12 ui-md-3 ui-fluid">
+      <label for="">Número</label>
+      <input pInputText type="text" >
+    </div>
+    <div class="ui-g-12 ui-lg-4 ui-fluid">
+      <label for="">Complemento</label>
+      <input pInputText type="text">
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-lg-4 ui-fluid">
+      <label for="">Bairro</label>
+      <input pInputText type="text">
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-lg-4 ui-fluid">
+      <label for="">CEP</label>
+      <p-inputMask mask="99.999-999"></p-inputMask>
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-fluid">
+      <label for="">Cidade</label>
+      <input pInputText type="text">
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-fluid">
+      <label for="">Estado</label>
+      <input pInputText type="text">
+    </div>
+  </div>
+</div>
